# jsondiff

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/jsondiff/: __main__.py  jsondiff.py
