[project]
name = "jsondiff"
version = "1.0.0"
authors = [{ name = "Jergus Lysy", email = "jergus.misc@gmail.com" }]
description = "A tool for watching JSON files and diffing them"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jerguslysy/jsondiff"
Issues = "https://github.com/jerguslysy/jsondiff/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.flake8]
# For now exclude legacy code and scanners lib
exclude = [
    "bbdj",                                          # not maintained
    "accessory",                                     # not maintained
    "openair",                                       # not maintained
    "tests/config/hw_profile.py",                    # test config, not relevant for linting
    "tests/config/local_settings.py",                # test config, not relevant for linting
    "tests/config/settings.py",                      # test config, not relevant for linting
    "equipment/octasic/stackapi/base/structures.py", # generated code, skip linting
]
max-line-length = 88
docstring-convention = "google"
extend-ignore = [
    "E203", # whitespace before ':'
    "E266", # too many leading '#' for block comment
    "E501", # line too long
    "W503", # line break before binary operator
    "S101", # use of assert detected
    "D102", # missing docstring in public method
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
    "A",    # flake8-annotations: missing type annotations
    "D",    # flake8-docstrings: missing docstring in public method
]

[tool.black]
line-length = 88
